--- a/requirements.txt
+++ b/requirements.txt
@@ -1,138 +1,10 @@
-absl-py==2.0.0
-altair==5.2.0
-annotated-types==0.6.0
-asttokens==2.4.1
-astunparse==1.6.3
-attrs==23.1.0
-blinker==1.7.0
-blis==0.7.11
-cachetools==5.3.2
-catalogue==2.0.10
-certifi==2023.11.17
-charset-normalizer==3.3.2
-click==8.1.7
-cloudpathlib==0.16.0
-colorama==0.4.6
-comm==0.2.0
-confection==0.1.4
-contourpy==1.2.0
-cycler==0.12.1
-cymem==2.0.8
-debugpy==1.8.0
-decorator==5.1.1
-eli5==0.13.0
-executing==2.0.1
-flatbuffers==23.5.26
-fonttools==4.46.0
-gast==0.4.0
-gitdb==4.0.11
-GitPython==3.1.40
-google-auth==2.25.2
-google-auth-oauthlib==1.0.0
-google-pasta==0.2.0
-graphviz==0.20.1
-grpcio==1.60.0
-h5py==3.10.0
-idna==3.6
-imageio==2.33.0
-importlib-metadata==6.11.0
-ipykernel==6.27.1
-ipython==8.18.1
-jedi==0.19.1
-Jinja2==3.1.2
-joblib==1.3.2
-jsonschema==4.20.0
-jsonschema-specifications==2023.11.2
-jupyter_client==8.6.0
-jupyter_core==5.5.0
-keras==2.13.1
-kiwisolver==1.4.5
-langcodes==3.3.0
-lazy_loader==0.3
-libclang==16.0.6
-lime==0.2.0.1
-Markdown==3.5.1
-markdown-it-py==3.0.0
-MarkupSafe==2.1.3
-matplotlib==3.8.2
-matplotlib-inline==0.1.6
-mdurl==0.1.2
-ml-dtypes==0.2.0
-murmurhash==1.0.10
-neattext==0.1.3
-nest-asyncio==1.5.8
-networkx==3.2.1
-numpy==1.24.3
-oauthlib==3.2.2
-opt-einsum==3.3.0
-packaging==23.2
-pandas==2.1.4
-parso==0.8.3
-Pillow==10.1.0
-platformdirs==4.1.0
-preshed==3.0.9
-prompt-toolkit==3.0.41
-protobuf==4.23.4
-psutil==5.9.6
-pure-eval==0.2.2
-pyarrow==14.0.1
-pyasn1==0.5.1
-pyasn1-modules==0.3.0
-pydantic==2.5.2
-pydantic_core==2.14.5
-pydeck==0.8.1b0
-Pygments==2.17.2
-pyparsing==3.1.1
-python-dateutil==2.8.2
-pytz==2023.3.post1
-pywin32==306
-pyzmq==25.1.2
-referencing==0.32.0
-requests==2.31.0
-requests-oauthlib==1.3.1
-rich==13.7.0
-rpds-py==0.13.2
-rsa==4.9
-scikit-image==0.22.0
-scikit-learn==1.3.2
-scipy==1.11.4
-seaborn==0.13.0
-six==1.16.0
-smart-open==6.4.0
-smmap==5.0.1
-spacy==3.7.2
-spacy-legacy==3.0.12
-spacy-loggers==1.0.5
-srsly==2.4.8
-stack-data==0.6.3
-streamlit==1.29.0
-tabulate==0.9.0
-tenacity==8.2.3
-tensorboard==2.13.0
-tensorboard-data-server==0.7.2
-tensorflow==2.13.0
-tensorflow-estimator==2.13.0
-tensorflow-intel==2.13.0
-tensorflow-io-gcs-filesystem==0.31.0
-termcolor==2.4.0
-thinc==8.2.1
-threadpoolctl==3.2.0
-tifffile==2023.12.9
-toml==0.10.2
-toolz==0.12.0
-tornado==6.4
-tqdm==4.66.1
-traitlets==5.14.0
-typer==0.9.0
-typing_extensions==4.5.0
-tzdata==2023.3
-tzlocal==5.2
-urllib3==2.1.0
-validators==0.22.0
-wasabi==1.1.2
-watchdog==3.0.0
-wcwidth==0.2.12
-weasel==0.3.4
-Werkzeug==3.0.1
-wrapt==1.14.1
-zipp==3.17.0
+altair
+pandas
+numpy
+streamlit
+tensorflow==2.14.0
+seaborn
+neattext
+sklearn
+wordcloud
+matplotlib
